fixed accept b&w check box alignment issue. #388.

--- a/PTO-WEB/src/main/resources/static/resources/css/lynnstyles.css
+++ b/PTO-WEB/src/main/resources/static/resources/css/lynnstyles.css
@@ -3041,3 +3041,17 @@ span#filingsheader {
 	margin-left:5px;
 	margin-bottom: 5px;
 }
+
+/* accept b/w image, colorclaim */
+#nocolorclaim .img-thumbnail {
+	max-width:310px;
+	margin:0 auto;
+	display:block;
+}
+#nocolorclaim .bwimage {
+
+	max-width:310px;
+
+	margin-left:25px;
+}
+
